Fixed problem with converting from String to PublicKey object (and vice-versa).